Add missing separators to the "Help" sub-menu of Dolphin's menubar replacement like all KDE apps have

BUG: 276560
(cherry picked from commit 68c5389eb80539f87bae84f2faad907ff51d09fc)